# loyalty_service

./: .env  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/: main.py  main_test.py
bot_gateway/: Dockerfile  pyproject.toml  requirements.txt
bot_gateway/app/: api_client.py  broker.py  cache.py  cache_client.py  main.py
bot_gateway/app/bots/customer_bot/handlers/: __init__.py
bot_gateway/app/bots/customer_bot/keyboards/: main_menu.py  onboarding.py
bot_gateway/app/bots/customer_bot/middlewares/: __init__.py  data_loader.py
bot_gateway/app/bots/customer_bot/states/: admin.py  general.py
bot_gateway/app/bots/employee_bot/filters/: employee_auth.py
bot_gateway/app/bots/employee_bot/handlers/: __init__.py
bot_gateway/app/bots/employee_bot/keyboards/: cashback_accrual.py  customer_finding.py  main_menu.py  onboarding.py  view_profile.py
bot_gateway/app/bots/employee_bot/middlewares/: __init__.py
bot_gateway/app/bots/employee_bot/states/: general.py
bot_gateway/app/bots/shared/filters/: bot_type_filter.py
bot_gateway/app/bots/shared/handlers/: __init__.py  test.py
bot_gateway/app/bots/shared/middlewares/: __init__.py  data_loader.py  employee_auth.py
bot_gateway/app/core/: dependencies.py  settings.py  setup.py
bot_gateway/app/customer_bot/handlers/general/: main_menu.py
bot_gateway/app/customer_bot/keyboards/: main_menu.py  reminder_creation.py  reminder_management.py
bot_gateway/app/customer_bot/middlewares/: config.py  data_loader.py  redis.py  scheduler.py
bot_gateway/app/customer_bot/text/: example.py
bot_gateway/app/customer_bot/text/formatters/: general.py
bot_gateway/app/subscribers/: bot_management.py  broadcast.py
core_api/: Dockerfile  pyproject.toml  requirements.txt
core_api/app/: broker.py  main.py  publishers.py
core_api/app/api/v1/: api.py
core_api/app/api/v1/endpoints/: backoffice_auth.py  company_broadcasts.py  company_employees.py  company_outlets.py  company_promotions.py  company_telegram_bots.py  customer_bot_auth.py  internal.py
core_api/app/core/: dependencies.py  exception_handlers.py  logger.py  security.py  settings.py
core_api/app/dao/: account.py  admin_tariff_plan.py  base.py  broadcast.py  cashback_config.py  company.py  company_default_cashback_config.py  customer_role.py  employee.py  holder.py  otp_code.py  outlet.py  promotion.py  promotion_usage.py  subscription.py  tariff_plan.py  telegram_bot.py  transaction.py  user_role.py
core_api/app/db/: base.py  session.py
core_api/app/enums/: __init__.py  billing_enums.py  notification_enums.py
core_api/app/exceptions/: __init__.py  common.py
core_api/app/exceptions/services/: account.py  backoffice_auth.py  company.py  company_customer.py  company_default_cashback_config.py  employee.py  employee_auth.py  employee_customer_interaction.py  outlet.py  promotion.py  subscription.py  tariff_plan.py
core_api/app/models/: __init__.py  account.py  association_tables.py  broadcast.py  company.py  company_default_cashback_config.py  customer_role.py  employee_role.py  notification.py  otp_code.py  outlet.py  subscription.py  tariff_plan.py  telegram_bot.py  transaction.py  user_role.py
core_api/app/models/promotions/: cashback_config.py  gift_config.py  points_config.py  promotion.py  promotion_filters.py  promotion_usage.py
core_api/app/schemas/: account.py  backoffice_auth.py  backoffice_dashboard.py  broadcast.py  company.py  company_employee.py  company_outlet.py  company_promotion.py  company_subscription.py  company_tariff_plan.py  company_telegram_bot.py  customer_bot_auth.py  customer_role.py  employee_bot_auth.py  employee_customer_interaction.py  otp_code.py  promotion_cashback_config.py  telegram_bot.py  telegram_bot_request.py  token.py  transaction.py  user_role.py
core_api/app/scripts/: create_superuser_cli.py
core_api/app/services/: account.py  backoffice_auth.py  backoffice_dashboard.py  company.py  company_customer.py  company_default_cashback_config.py  company_employee.py  company_outlet.py  company_promotion.py  company_tariff_plan.py  company_telegram_bot.py  company_telegram_broadcast.py  customer_bot_auth.py  employee_bot_auth.py  employee_customer_interaction.py  otp_code.py  otp_sending.py  telegram_broadcast.py  transaction_cashback_calculation.py
core_api/app/utils/: subscription_utils.py  validators.py
core_api/migrations/: env.py
core_api/migrations/versions/: 0f726c39d843_small_fix.py  327f43d29ea9_refactoring.py  461a54a915fe_small_fix.py  afb72d6f0e56_some_migration.py  d834de30dea9_first.py  ee23259a034f_small_changes.py  fe6baa1378dd_small_fix.py
core_api/tests/: conftest.py
core_api/tests/integration/test_backend/test_core/: test_security_flow.py
core_api/tests/integration/test_backend/test_services/: test_otp_code_flow.py
core_api/tests/unit/test_backend/test_core/: test_security.py
shared/: pyproject.toml  setup.py
shared/schemas/: schemas.py
shared/shared/schemas/: schemas.py
shared/shared/utils/: security.py  validators.py
shared/utils/: security.py
(+285 files in other folders)
