[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = "A monorepo for bot_gateway and core_api services."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "bot_gateway" },
    { include = "core_api" },
    { include = "shared" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Зависимости для разработки, объединенные из всех requirements.txt
[tool.poetry.group.dev.dependencies]
aio-pika = "9.5.5"
aiofiles = "24.1.0"
aiogram = "3.20.0.post0"
aiogram-dialog = "2.3.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiormq = "6.8.1"
aiosignal = "1.4.0"
alembic = "1.16.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
asyncpg = "0.30.0"
attrs = "25.3.0"
black = "25.1.0"
cachetools = "5.5.2"
certifi = "2025.6.15"
cffi = "1.17.1"
click = "8.2.1"
cryptography = "44.0.3"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
exceptiongroup = "1.3.0"
fast-depends = "2.4.12"
fastapi = "0.115.14"
faststream = "0.5.44"
flake8 = "7.2.0"
frozenlist = "1.7.0"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.7.0"
iniconfig = "2.1.0"
isort = "6.0.1"
izulu = "0.50.0"
jinja2 = "3.1.6"
magic-filter = "1.0.12"
mako = "1.3.10"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mccabe = "0.7.0"
mdurl = "0.1.2"
multidict = "6.6.3"
mypy = "1.15.0"
mypy-extensions = "1.1.0"
packaging = "25.0"
pamqp = "3.3.0"
passlib = "1.7.4"
pathspec = "0.12.1"
platformdirs = "4.3.8"
pluggy = "1.5.0"
propcache = "0.3.2"
pyasn1 = "0.6.1"
pybreaker = "1.3.0"
pycodestyle = "2.13.0"
pycparser = "2.22"
pycron = "3.2.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
pyflakes = "3.3.2"
pygments = "2.19.2"
pytest = "8.3.5"
pytest-asyncio = "1.0.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pytz = "2025.2"
redis = "6.2.0"
rich = "14.0.0"
rsa = "4.9.1"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.41"
starlette = "0.46.2"
taskiq = "0.11.17"
taskiq-aio-pika = "0.4.2"
taskiq-dependencies = "1.5.7"
taskiq-fastapi = "0.3.5"
typer = "0.16.0"
typing-inspection = "0.4.1"
typing-extensions = "4.14.1"
uvicorn = "0.35.0"
watchfiles = "1.1.0"
yarl = "1.20.1"
zipp = "3.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Конфигурация isort
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Конфигурация mypy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Конфигурация Pylance (для VS Code)
[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
