[tool.poetry]
name = "bot-gateway"
version = "0.1.0"
description = "Bot Gateway service"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.14"
aiogram = "3.20.0.post0"
redis = "6.2.0"
shared = { path = "../shared", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.0"
black = "^25.0"
