[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Common utilities for all services"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "pydantic>=2.0",
  "python-jose[cryptography]>=3.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
